--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <body>
     <div class="contenedor">
       <section class="contenido">
+        <h1>Hola</h1>
         <h1 id="titulo">Lista de tareas</h1>
         <input
         type="text"
