--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <div class="contenedor">
       <section class="contenido">
         <h1>Hola</h1>
+        <h1>Me llamo Allan</h1>
         <h1 id="titulo">Lista de tareas</h1>
         <input
         type="text"
